# MM-SOUND-Normalize

./: FILE_ID.DIZ  NEWS  README  README.md  Readme.os2
src/: Makefile  Makefile.am  Makefile.in  TODO  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  mktestwav.c  normalize-mp3  normalize-mp3.in  normalize.1  normalize.c  normalize.c.flc  riff.c  riff.h
src/intl/: Makefile
src/po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  cat-id-tbl.c  en_GB.gmo  en_GB.po  fr.gmo  fr.po  normalize.pot
src/src_org/: Makefile.in  configure  normalize.c
